# Jidou

./: .env.ci  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.nas.yml  docker-compose.yml  docker-entrypoint.sh  make.py  plan-core-scaffold.md  pr_body.md  pyproject.toml
.claude/: CLAUDE.md  commit-msg.txt  plan.md  settings.local.json
.claude/plan/: phase3-plan.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_aliases_sources.py  0002_add_file_tracked_at_to_episodes.py  0002_media_routing_schema.py  0003_add_tracking_metadata_to_episodes.py  0003_show_genres_and_origin_country.py  0004_add_orphaned_tracking_records.py  0005_add_task_event_log.py  0006_add_rss_tables.py  0007_rss_sub_unique_stub_per_show.py  0008_rss_feed_active.py  0009_perf_indexes.py  20260616_0002_background_tasks.py  20260617_0003_episodes_and_files.py  20260620_0004_unique_file_remote_path.py  20260620_0005_unique_watchlist_show_id.py  20260708_f437cd782b1b_add_index_on_episodes_air_date.py  20260713_287c0908e5d1_add_scanned_directories.py
docs/: api.md  architecture.md  developer.md  features.md  matching-pipeline.md  quickstart.md  screenshots.md  setup.md  troubleshooting.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: AliasModal.tsx  AssignImportModal.tsx  Badge.tsx  CardCarousel.tsx  ConfirmDialog.tsx  ConnectionBadge.tsx  ContentTypeModal.tsx  DashboardSectionControls.tsx  EditPathModal.tsx  ErrorBoundary.tsx  FeedFormModal.tsx  FeedsTable.tsx  Field.tsx  FileChip.tsx  FileStatusBadge.tsx  FixEpisodeModal.tsx  Layout.tsx  LinkFileModal.tsx  MediaDetailModal.tsx  NavBar.tsx  OrphanResolveModal.tsx  Pagination.tsx  RecentEpisodeCard.tsx  RecentEpisodesSection.tsx  RecentMoviesSection.tsx  RecentShowCard.tsx  RecentShowsSection.tsx  RecommendationsTab.tsx  RematchModal.tsx  ResolveFileModal.tsx  ScanLocalFilesModal.tsx  ShowCard.tsx  ShowRematchModal.tsx  SubPreviewModal.tsx  SubscriptionCreateModal.tsx  SubscriptionEditModal.tsx  SubscriptionsTable.tsx  TaskEventLog.tsx  TaskProgressBar.tsx  TaskStatusBadge.tsx  (+2 more)
frontend/src/hooks/: useAdmin.ts  useCalendar.ts  useDashboard.ts  useData.ts  useDebounce.ts  useFiles.ts  useFocusTrap.ts  useLocalStorage.ts  useOrphans.ts  useRss.ts  useSettings.ts  useShows.ts  useTaskProgress.ts  useTasks.ts  useWatchlist.ts
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Data.tsx  Discover.tsx  Files.tsx  RSS.tsx  Settings.tsx  ShowDetail.tsx  Shows.tsx  Tasks.tsx  Watchlist.tsx
frontend/src/stores/: wsConnection.tsx
frontend/src/tests/: setup.ts
frontend/src/types/: api-generated.ts  api.ts
frontend/src/utils/: buildShowCreatePayload.ts  dqChecks.ts  episodeUtils.ts  paths.ts
src/jidou/: __init__.py  config.py  database.py  main.py
src/jidou/api/: __init__.py  dependencies.py  health.py  shows.py
src/jidou/models/: __init__.py  app_setting.py  base.py  downloaded_file.py  episode.py  orphan.py  rss.py  scanned_directory.py  show.py  task.py  watchlist.py
src/jidou/orchestrators/: _bulk_existence.py  alias_orchestrator.py  download_orchestrator.py  manual_match_orchestrator.py  match_orchestrator.py  nas_import_orchestrator.py  parse_orchestrator.py  path_import_orchestrator.py  route_orchestrator.py  rss_import_orchestrator.py  rss_publish_orchestrator.py  scan_orchestrator.py  seed_orchestrator.py  show_rematch_orchestrator.py  sync_orchestrator.py  tmdb_orchestrator.py
src/jidou/schemas/: admin_schema.py  calendar_schema.py  dashboard_schema.py  discover_schema.py  episode_schema.py  file_schema.py  import_schema.py  orphan_schema.py  rss_schema.py  settings_schema.py  show_schema.py  task_schema.py  watchlist_schema.py
src/jidou/services/: __init__.py  cache.py  episode_file_matching.py  episode_group_mapping.py  episode_lookup.py  episode_match_llm.py  episode_tracking.py  file_filters.py  filename_parser.py  llm_json.py  llm_service.py  nas_parser.py  path_parser.py  path_resolution.py  progress.py  pubsub_subscriber.py  rate_limiter.py  rss_config.py  rss_stub.py  settings_service.py  sftp_service.py  show_lookup.py  synthetic_file.py  sys_name.py  tmdb.py  tmdb_mapping.py
src/jidou/workers/: _harness.py  celery_app.py  db_import_tasks.py  download_tasks.py  import_tasks.py  match_tasks.py  route_tasks.py  rss_tasks.py  scan_tasks.py  scheduled_tasks.py  seed_tasks.py  sync_tasks.py  tasks.py
tests/: _fake_orchestrator_session.py  conftest.py  test_admin_routes.py  test_alias_orchestrator.py  test_api_export_routes.py  test_api_import_routes.py  test_bulk_existence.py  test_cache_service.py  test_calendar_routes.py  test_config.py  test_config_routes.py  test_dashboard_routes.py  test_database.py  test_db_import_tasks.py  test_dependencies.py  test_episode_file_matching.py  test_episode_group_mapping.py  test_episode_lookup.py  test_episode_match_llm.py  test_episode_tracking.py  test_file_filters.py  test_filename_parser.py  test_files_routes.py  test_health.py  test_llm_json.py  test_llm_service.py  test_main.py  test_models.py  test_nas_import.py  test_orphan_routes.py  test_path_import.py  test_path_resolution.py  test_progress.py  test_progress_service.py  test_pubsub.py  test_rate_limiter.py  test_rss_config.py  test_rss_import_orchestrator.py  test_rss_publish_orchestrator.py  test_rss_routes.py  (+19 more)
tests/test_orchestrators/: test_download_orchestrator.py  test_episode_match_orchestrator.py  test_manual_match_orchestrator.py  test_match_orchestrator.py  test_route_orchestrator.py  test_scan_orchestrator.py  test_scan_seed_integration.py  test_show_rematch_orchestrator.py  test_sync_orchestrator.py  test_tmdb_orchestrator.py
tests/test_websocket/: test_task_progress.py
(+32 files in other folders)
