[project]
name = "jidou"
version = "0.1.0"
description = "Jidou project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Jidou Team" },
]
dependencies = [
    # CLI
    "click>=8.1",
    "rich>=13.7",

    # Validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.1",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Task queue
    "celery[redis]>=5.4",

    # Redis
    "redis>=5.2",
    "hiredis>=2.3",

    # SFTP
    "asyncssh>=2.15",

    # HTTP client for external APIs
    "httpx>=0.27",
    "aiohttp>=3.11",

    # Logging
    "structlog>=24.4",

    # Caching
    "cachetools>=5.5",
]

[project.optional-dependencies]
dev = [
    # --- Testing ---
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.110",

    # --- Linting / Formatting ---
    "ruff>=0.8",
    "mypy>=1.12",

    # --- Build / Publish ---
    "build>=1.2",
    "twine>=5.1",

    # --- Security ---
    "bandit>=1.7.9",

    # --- Pre-commit hooks ---
    "pre-commit>=3.8",
]

[project.scripts]
jidou = "jidou.main:main"
jidou-make = "make:cli"

[project.urls]
Repository = "https://github.com/jamesbconner/jidou"
Issues = "https://github.com/jamesbconner/jidou/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "redis.asyncio"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers", "-v"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:websockets.*is deprecated:DeprecationWarning",
    "ignore:unclosed:ResourceWarning",
    "ignore:loop is closed:ResourceWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 45  # TODO: raise back to 70 as task/worker tests are added

[tool.hatch.build.targets.wheel]
packages = ["src/jidou"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B104"]  # binding to 0.0.0.0 is required for Docker deployment
